MDEV-19983 failure to update CC seqno on every primary CC.

Move the code to where it is hit on every primary CC.